<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="deltagruppen.circles.PiInfo"
    android:id="@+id/pi_info_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_perfect_pi_description"
        android:id="@+id/leftFactListTextView"
        android:textSize="13sp"
        android:textColor="#000000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leftFactListTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout5"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head_students"
            android:id="@+id/textView6"
            android:textSize="20sp"
            android:textColor="#01579b"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head_math_center"
            android:id="@+id/textView24"
            android:textSize="20sp"
            android:textColor="#01579b"
            android:textStyle="bold"
            android:layout_marginLeft="350dp"
            android:layout_marginStart="500dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head_projectleader"
                android:id="@+id/textView7"
                android:textColor="#01579b"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_projectleader"
                android:id="@+id/textView8"
                android:textColor="#000000"
                android:textSize="10sp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head_secretary"

                android:textColor="#01579b"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_JYI"

                android:textColor="#000000"
                android:textSize="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp">

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head_programmers"
                android:id="@+id/textView11"
                android:textColor="#01579b"
                android:textSize="12sp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_AKN"
                android:id="@+id/textView14"
                android:textColor="#000000"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_CEG"
                android:id="@+id/textView15"
                android:textColor="#000000"
                android:textSize="10sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_CA"
                android:id="@+id/textView16"
                android:textColor="#000000"
                android:textSize="10sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_DJ"
                android:id="@+id/textView17"
                android:textColor="#000000"
                android:textSize="10sp"/>




        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_marginLeft="130dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linearLayout3"
        android:id="@+id/linearLayout4">



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:id="@+id/linearLayout7"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head_lead_programmer"
                android:textSize="12sp"
                android:textColor="#01579b"
                android:id="@+id/textView22"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_MM"
                android:textSize="10sp"
                android:textColor="#000000"
                android:id="@+id/textView23"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="102dp"
            android:id="@+id/linearLayout6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head_user_testing"
                android:id="@+id/textView19"
                android:textColor="#01579b"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_AM"
                android:id="@+id/textView20"
                android:textSize="10sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_AE"
                android:id="@+id/textView21"
                android:textSize="10sp"
                android:textColor="#000000"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="102dp"
            android:id="@+id/linearLayout6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head_guiux"
                android:id="@+id/textView9"
                android:textColor="#01579b"
                android:textSize="12sp"
                android:layout_below="@+id/linearLayout4"
                android:layout_alignRight="@+id/linearLayout4"
                android:layout_alignEnd="@+id/linearLayout4"
                android:layout_marginRight="96dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_PS"
                android:id="@+id/textView10"
                android:textColor="#000000"
                android:textSize="10sp"
                android:layout_alignBottom="@+id/linearLayout3"
                android:layout_alignLeft="@+id/textView9"
                android:layout_alignStart="@+id/textView9" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginStart="130dp"
        android:layout_toRightOf="@+id/linearLayout4"
        android:layout_toEndOf="@+id/linearLayout4"
        android:layout_alignTop="@+id/linearLayout4"
        android:layout_marginTop="13dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_sl"
            android:id="@+id/textView25"
            android:textColor="#000000"

            android:textSize="10sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_sl"
            android:id="@+id/textView26"
            android:textColor="#000000"
            android:textSize="10sp"/>
    </LinearLayout>


</RelativeLayout>
