<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity"
    android:id="@+id/main_layout"
    android:background="#eceff1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="320dp"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ff93b6c5"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#ffbfd8dc"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:background="@drawable/hand_arrow"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_margin="18dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="36dp"
                android:layout_marginEnd="36dp"
                android:contentDescription="@string/hand_arrow_description" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/head_instructions"
                    android:id="@+id/textView"
                    android:layout_marginTop="18dp"
                    android:textSize="11.25dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/instruction_part_one"
                    android:id="@+id/textView3"
                    android:layout_marginTop="18dp"
                    android:textSize="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/instruction_part_two"
                    android:id="@+id/textView2"
                    android:layout_marginTop="18dp"
                    android:textSize="8dp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <deltagruppen.circles.DrawView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/linearLayout"
        android:layout_toEndOf="@+id/linearLayout"
        android:background="#fff" />

</RelativeLayout>
